--- a/src/components/Post/style.scss
+++ b/src/components/Post/style.scss
@@ -1,60 +1,75 @@
 @import "../../assets/scss/variables";
 @import "../../assets/scss/mixins";
 
-.post {
+.thumbpost {
     @include margin-bottom(1.25);
     &:last-child {
         @include margin-bottom(.5);
     }
-    &__title {
-        font-size: $typographic-base-font-size * 1.6875;
-        @include line-height(1.5);
-        @include margin-top(0);
-        @include margin-bottom(.5);
-        &-link {
-            color: $color-base;
-            &:hover,
-            &:focus {
-                color: $color-base;
-                border-bottom: 1px solid $color-base;
-            }
-        }
+    display: flex;
+
+    &-thumb {
+        @include margin(1.25, .5, 0, 0);
+        flex: 0 0 48px;
+        width: 48px;
+        height: 48px;
+        background-color: red;
+        display: inline-block;
+        border-radius: 50%;
+        background-clip: padding-box;
     }
-    &__description {
-        font-size: $typographic-base-font-size;
-        @include line-height(1);
-        @include margin-bottom(.75);
-    }
-    &__meta {
-        &-time {
-            font-size: $typographic-small-font-size;
-            color: $color-base;
-            font-weight: 500;
-            text-transform: uppercase;
-        }
-        &-divider {
-            margin: 0 5px;
-        }
-        &-category {
-            &-link {
+    &-post {
+        &__meta {
+            &-time {
                 font-size: $typographic-small-font-size;
-                color: $color-secondary;
+                color: $color-base;
                 font-weight: 500;
                 text-transform: uppercase;
-                &:hover,
-                &:focus {
-                    color: $color-primary;
+            }
+            &-divider {
+                margin: 0 5px;
+            }
+            &-category {
+                &-link {
+                    font-size: $typographic-small-font-size;
+                    color: $color-secondary;
+                    font-weight: 500;
+                    text-transform: uppercase;
+                    &:hover,
+                    &:focus {
+                        color: $color-primary;
+                    }
                 }
             }
         }
-    }
-    &__readmore {
-        font-size: $typographic-base-font-size;
-        color: $color-primary;
-        &:hover,
-        &:focus {
+        &__title {
+            font-size: $typographic-base-font-size * 1.6875;
+            @include line-height(1.5);
+            @include margin-top(0);
+            @include margin-bottom(.5);
+            &-link {
+                color: $color-base;
+                &:hover,
+                &:focus {
+                    color: $color-base;
+                    border-bottom: 1px solid $color-base;
+                }
+            }
+        }
+        &__description {
+            font-size: $typographic-base-font-size;
+            @include line-height(1);
+            @include margin-bottom(.75);
+        }
+        &__readmore {
+            font-size: $typographic-base-font-size;
             color: $color-primary;
-            border-bottom: 1px solid $color-primary;
+            &:hover,
+            &:focus {
+                color: $color-primary;
+                border-bottom: 1px solid $color-primary;
+            }
         }
     }
 }
+
