--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,14 +3,15 @@
  */
 
 // Colors
-$color-base: #222;
-$color-primary: #5d93ff;
-$color-secondary: #f7a046;
+$color-main-bg: #EDF2F4;
+$color-base: #2B2D42;// #222;
+$color-primary: #EF233C;// #5d93ff;
+$color-secondary: #D90429;// #f7a046;
 
-$color-white: lighten($color-base, 100%);
+$color-white: lighten($color-base, 70%);
 $color-gray: lighten($color-base, 40%);
-$color-gray-border: lighten($color-base, 77%);
-$color-gray-bg: lighten($color-base, 79%);
+$color-gray-border: lighten($color-base, 70%);
+$color-gray-bg: lighten($color-base, 65%);
 
 // Typographic
 $typographic-font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
