Fixing thumbnail background color

--- a/src/components/Post/style.scss
+++ b/src/components/Post/style.scss
@@ -13,7 +13,7 @@
         flex: 0 0 48px;
         width: 48px;
         height: 48px;
-        background-color: red;
+        background-color: $color-main-bg;
         display: inline-block;
         border-radius: 50%;
         background-clip: padding-box;
