Style and content rearrangement

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,7 +3,7 @@
  */
 
 // Colors
-$color-main-bg: #EDF2F4;
+$color-main-bg: #FFFFFF;
 $color-base: #2B2D42;// #222;
 $color-primary: #EF233C;// #5d93ff;
 $color-secondary: #D90429;// #f7a046;
